# cpp_example_collection

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  todo.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/hidden_info/: fpp.json
.github/workflows/: cmake.yml
algorithm/: CMakeLists.txt  accumulator.h  adjacent_difference.h  adjacent_find.h  all_of.h  any_of.h  binary_search.h  main.cpp
catch2/: .clang-format  CMakeLists.txt
catch2/T9_text_prediction_algorithm/: CMakeLists.txt  T9_text_prediction_algorithm.cpp
catch2/failed_testcase/: CMakeLists.txt  failed_testcase.cpp  failed_testcase.h
catch2/test_main/: CMakeLists.txt  test_main.cpp
functional_programming_patterns/: CMakeLists.txt  closure.cpp
modern_cpp_tutorial/: CMakeLists.txt
modern_cpp_tutorial/chapter_02/: CMakeLists.txt  constexpr.cpp  nullptr.cpp
snippet/: CMakeLists.txt  matrix_times_vector.cpp  measure_time.cpp  print_reverse_order.cpp
