cmake_minimum_required(VERSION 3.6)
project(functional_programming_patterns)

add_executable("FPP_closure" closure.cpp)
add_executable("FPP_lazy" lazy.cpp)
add_executable("FPP_map" map.cpp)
add_executable("FPP_functors" functors.cpp)
add_executable("FPP_monads" monads.cpp)
add_executable("FPP_fold_and_reduce" fold_and_reduce.cpp)
add_executable("FPP_multiple_return_value" multiple_return_value.cpp)
add_executable("FPP_dynamic_wind" dynamic_wind.cpp)
