# CMakeList.txt : CMake project for T9_text_prediction_algorithm, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("T9_text_prediction_algorithm")

# Add source to this project's executable.
add_executable (T9_text_prediction_algorithm "T9_text_prediction_algorithm.cpp" )

# TODO: Add tests and install targets if needed.
