# CMakeList.txt : CMake project for failed_testcase, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("failed_testcase")

# Add source to this project's executable.
add_executable (failed_testcase "failed_testcase.cpp" "failed_testcase.h")

# TODO: Add tests and install targets if needed.
