# CMakeList.txt : CMake project for test_main, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("test_main")

# Add source to this project's executable.
add_executable (Catch2_test_main test_main.cpp)

# TODO: Add tests and install targets if needed.
